# reeflex

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  llms.txt  mkdocs.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-reeflex-mcp.yml  ci.yml  docs.yml  release.yml
docs/: RELEASING.md  architecture.md  faq.md  index.md  llms.txt  mcp-gateway.md  open-core.md  policy-guide.md  roadmap.md  robots.txt  siem.md  why-reeflex.md
docs/adapters/: index.md
docs/adr/: 0001-deployment-model.md  0002-no-llm-in-decision-path.md
docs/architecture/: diagrams.md
docs/blog/: one-minute-policy.md
docs/compliance/: index.md
docs/concepts/: index.md
docs/getting-started/: index.md
docs/guides/: n8n.md
docs/operations/: index.md
docs/policy/: index.md
docs/reference/: action-envelope.md  changelog.md  configuration.md  index.md  rest-api.md
docs/stylesheets/: extra.css
integrations/wazuh/: README.md  reeflex-ciso-dashboard.ndjson  reeflex-decoder.xml  reeflex-rules.xml
n8n-nodes-reeflex/: .gitignore  LICENSE  PUBLISH.md  README.md  package-lock.json  package.json  tsconfig.test.json
n8n-nodes-reeflex/.github/workflows/: ci.yml  publish.yml
n8n-nodes-reeflex/credentials/: ReeflexApi.credentials.ts
n8n-nodes-reeflex/examples/: bulk-delete-guard.workflow.json
n8n-nodes-reeflex/examples/n8n/: README.md  demo1-README.md  demo1-bulk-delete-guard.workflow.json  demo2-README.md  demo2-fragmentation-doesnt-work.workflow.json  demo3-README.md  demo3-the-approval-loop.workflow.json  demo4-README.md  demo4-nothing-gets-through.workflow.json  demo5-README.md  demo5-watch-before-you-enforce.workflow.json
n8n-nodes-reeflex/nodes/ReeflexGate/: ReeflexGate.node.json  ReeflexGate.node.ts
n8n-nodes-reeflex/test/: reeflexGate.test.ts
overrides/: 404.html  main.html
reeflex-claude/: .gitignore  PUBLISH-PYPI.md  README.md  hook_entry.py  pyproject.toml
reeflex-claude/demo/: run_demo.py
reeflex-claude/examples/: settings.sample.json
reeflex-claude/examples/payloads/: bash-ls.json  bash-rm-dir.json  bash-rm-rf-root.json  git-push-force.json  read-file.json  write-new-source.json  write-prod-config.json
reeflex-claude/policy/: reeflex_claude_demo.rego  reeflex_claude_demo_test.rego
reeflex-claude/reeflex_claude/: __init__.py  __main__.py  audit.py  classify.py  cli.py  enforce.py  envelope.py  hook.py  setup_settings.py
reeflex-claude/tests/: test_classify.py  test_cli.py  test_enforce.py  test_envelope.py  test_observe.py  test_setup_settings.py
reeflex-core/: README.md  main.py
reeflex-core/app/: __init__.py  _version.py  audit.py  decide.py  envelope.py  holds.py  ledger.py  opa.py  server.py  telemetry.py  webhook.py
reeflex-core/audit/: .gitignore
reeflex-core/policy/: reeflex.rego  reeflex_test.rego
reeflex-core/tests/: __init__.py  test_audit_enrichment_v0113.py  test_auth.py  test_decide.py  test_hardening.py  test_hil.py  test_hold_consume_cas.py  test_kill_switch_wiring.py  test_telemetry.py  test_traceability.py
reeflex-holds/: README.md  pyproject.toml
reeflex-holds/mcpb/: .gitignore  .mcpbignore  README.md  build.ps1  build.sh  manifest.json
reeflex-holds/mcpb/server/: main.py
reeflex-holds/reeflex_holds/: __init__.py  __main__.py  client.py  config.py  server.py
reeflex-holds/tests/: test_client.py  test_config.py  test_server.py
reeflex-mcp/: README.md  pyproject.toml  reeflex-mcp.yaml.example
reeflex-mcp/reeflex_mcp/: __init__.py  __main__.py  _doctor_upstream.py  canonical.py  cli.py  client_configs.py  config.py  core_client.py  gateway.py  holds_tracker.py  lifecycle.py  mappings.py  normalize.py  obligations.py  registry.py  upstream.py
reeflex-mcp/reeflex_mcp/mappings/: filesystem.yaml  github.yaml  postgres.yaml
reeflex-mcp/tests/: test_canonical.py  test_cli_setup.py  test_client_configs.py  test_config.py  test_core_client.py  test_gateway.py  test_gateway_admin.py  test_gateway_obligations.py  test_holds_tracker.py  test_lifecycle.py  test_mappings.py  test_normalize.py  test_obligations.py  test_registry.py  test_registry_raw.py  test_upstream.py
reeflex-mcp/tests/fixtures/: e2e_declarative_mapping.py  e2e_enforce_holds.py  e2e_http_front_check.py  e2e_obligations.py  e2e_smoke.py  http_upstream.py  stdio_upstream.py  stub_core_obligations.py
reeflex-mock/: .gitignore  Makefile  README.md  adapter.py  agent.py  demo.py  demo.sh  store.py
reeflex-spec/: ADAPTER-EXAMPLES.md  IMPACT-MODEL.md  README.md  SPEC.md
reeflex-verify/: README.md  reeflex-verify.py
reeflex-verify/wordpress-test-plugin/reeflex-test-abilities/: reeflex-test-abilities.php
reeflex-wordpress/: DEMO.md  INSTALL.md  README.md  phpcs.xml.dist  readme.txt  reeflex-gate.php  uninstall.php
reeflex-wordpress/reeflex-gate/: class-reeflex-admin.php  class-reeflex-audit.php  class-reeflex-config.php  class-reeflex-core-client.php  class-reeflex-gate.php  class-reeflex-holds-store.php  class-reeflex-normalizer.php  class-reeflex-settings.php
reeflex-wordpress/tests/: README.md  admin-holds-demo.php  conformance-demo.php  fanout-regression-demo.php  hold-dedup-regression-demo.php  wp-stubs.php
scripts/: build-wp-zips.py
